# Sonic_ComfyUI

./: README.md  __init__.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: publish.yml
example/: audio2video.json  text2video.json
